# code

./: README.md
which/: .envrc  CHANGELOG.md  README.md  flake.nix  hie.yaml  pre-commit  which.cabal
which/app/: Main.hs
which/commands/: format
which/src/: Which.hs
which/test/: Properties.hs  Spec.hs
